# i-PEL2023

./: .gitignore  README.md  Readme.md
Mikrocontroller/: interrupts
Mikrocontroller/DriveControl/: CMakeLists.txt  CMakeMacro.cmake  README.md  Readme_config.md  readme_cubemx.md
Mikrocontroller/DriveControl/Core/Inc/: Trajectory.h  constants.h  encoder.h  gpio.h  main.h  motor_controller.h  pid_controller.h  serial.h  stm32f7xx_hal_conf.h  timer_initialize.h
Mikrocontroller/DriveControl/Core/Src/: encoder.cpp  main.cpp  motor_controller.cpp  pid_controller.cpp
Mikrocontroller/DriveControl/Core/visu/: help.py  main.py
Mikrocontroller/DriveControl/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_pcd.h  stm32f7xx_hal_pcd_ex.h  stm32f7xx_ll_usb.h
Mikrocontroller/DriveControl/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c  stm32f7xx_hal_gpio.c  stm32f7xx_hal_pcd.c  stm32f7xx_hal_pcd_ex.c  stm32f7xx_ll_usb.c
Mikrocontroller/i-PEL/: CMakeLists.txt
Mikrocontroller/i-PEL/Core/Inc/: define.h  main.h  motor_controller.h  pid_controller.h
Mikrocontroller/i-PEL/Core/Src/: main.cpp  stm32f7xx_hal_msp.c  timer_initialize.cpp
Mikrocontroller/i-PEL/Drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f767xx.h
Mikrocontroller/tool-libs/stm/: encoder.h  gpio.h
Mikrocontroller/tool-libs/utils/: Experiment.h  Transport.h
